aws/RouteTables-us-east-1.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "RouteTableAssociationId": "rtbassoc-fb4aae9c", 
     "Main": true, 
     "RouteTableId": "rtb-da443ebe"
    }
   ], 
   "RouteTableId": "rtb-da443ebe", 
   "VpcId": "vpc-a34dc3c7", 
   "PropagatingVgws": [], 
   "Tags": [], 
   "Routes": [
    {
     "GatewayId": "local", 
     "DestinationCidrBlock": "172.31.0.0/16", 
     "State": "active", 
     "Origin": "CreateRouteTable"
    }, 
    {
     "GatewayId": "igw-a88366cc", 
     "DestinationCidrBlock": "0.0.0.0/0", 
     "State": "active", 
     "Origin": "CreateRoute"
    }
   ]
  }
 ]
}
